# CreeperCLI-2

./: .gitignore  Cargo.toml  LICENSE  creeper.toml  default.project.json  readme.md  sourcemap.json  test_map.json
.github/workflows/: release.yml
game/ReplicatedStorage/: hello.json  hello.lua  hello.toml  test_json.json  test_toml.toml
game/ServerScriptService/: hello.server.lua  hello.server.luau
game/ServerScriptService/multiscript/: amogus.luau
game/ServerScriptService/object.ClickDetector/: ClickScript.serverluau
game/ServerStorage/: hello.server.lua  storage.luau
game/ServerStorage/amogus/: ANOTHER SCRIPT.server.lua  Script.server.lua
game/StarterPlayer/StarterPlayerScripts/: hello.client.luau
plugin/: creeper_cli_PLUGIN.rbxm
src/: filesystem.rs  get.rs  init.rs  main.rs  post.rs  run_server.rs  server.rs  settings.rs  sourcemap.rs  update.rs
src/commands/: init.rs  mod.rs  pizza.rs  update.rs  version.rs
