[package]
name = "creeper_cli"
version = "1.2.6"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.9.0"
colored = "2.1.0"
serde_json = "1.0.128"
toml = "*"
lazy_static = "1.4.0"
unescape = "0.1.0"
zip = "0.5.13"
tar = "0.4"
tempfile = "3.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
flate2 = "1.0"